Fix contact text being broken in Japanese

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -267,3 +267,7 @@
 {% if projects_page_exist %}
   @import "projects/project-container";
 {% endif %}
+
+.contact-container > h3 {
+  white-space: nowrap;
+}
